2005-05-12  Carl Worth  <cworth@cworth.org>

	* test/.cvsignore:
	* test/Makefile.am:
	* test/paint-with-alpha-ref.png:
	* test/paint-with-alpha.c: (draw), (main): Add new test for bug in
	cairo_paint_with_alpha not transforming the source.

	* src/cairo-gstate.c: (_cairo_gstate_mask): Use a transformed copy
	of the source just like we do in all the other calls to
	cairo_surface_composite. Fixes the bug tested by
	test/paint-with-alpha.

2005-05-12  Keith Packard  <keithp@keithp.com>

	reviewed by: otaylor

	* src/cairo-gstate.c: (_get_mask_extents):
	_get_mask_extents creates a pixman region but
	neglects to destroy it.

2005-05-11  Owen Taylor  <otaylor@redhat.com>

	* src/cairo-win32-surface.c (categorize_solid_dest_operator):
	Handle more cases by assuming no-super-luminescent colors.

2005-05-11  T Rowley  <tim.rowley@gmail.com>

	* src/cairo-atsui-font.c:
	* src/cairo-atsui.h:
	* src/cairo-quartz-surface.c: Revive quartz backend.

2005-05-11  David Reveman  <davidr@novell.com>

	* src/cairo-glitz-surface.c (_cairo_glitz_surface_fill_rectangles): 
	Set fill type repeat on source surface.
	(_cairo_glitz_surface_show_glyphs): Add missing cairo operator to
	glitz operator conversion.
	(_cairo_glitz_surface_show_glyphs): Only render glyphs with non zero
	size. 

2005-05-11  Owen Taylor  <otaylor@redhat.com>

	* src/cairo-surface.c (_fallback_fill_rectangles):
	Fix bounding box computation.

	* src/cairo-win32-surface.c: Patch from Tor Lillqvist
	to make things compile and work again.

	* test/cairo-test.c (create_win32_surface): Don't
	#error because there is no win32 test, it isn't useful. 
	Just skip it.

	* src/cairo-win32-font.c: Fix up matrix constness.

	* test/Makefile.am (TESTS): Skip the pdf-surface test
	if we don't have the PDF backend.

	* src/cairo-win32-surface.c (categorize_solid_dest_operator):
	Optimize fill_rectangles for all cases where the destination
	ends up a solid color.

2005-05-11  Owen Taylor  <otaylor@redhat.com>
